# agent-replay

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  skills.md  tsconfig.json
.github/workflows/: ci.yml
agent_replay/: __init__.py  cost.py  diff.py  export.py  pricing.py  recorder.py  replay.py  session.py  store.py
agent_replay/cli/: __init__.py  cmd_annotate.py  cmd_diff.py  cmd_export.py  cmd_list.py  cmd_record.py  cmd_show.py  cmd_stats.py  main.py
agent_replay/integrations/: __init__.py  anthropic.py  crewai.py  google_adk.py  langchain.py  openai.py
docs/: integrations.md  pricing.md  quickstart.md  schema.md
examples/: basic_anthropic.py  google_adk_agent.py  langchain_agent.py  typescript_example.ts
pricing/: models.yaml
tests/fixtures/: sample_session.json
tests/integration/: test_anthropic_integration.py  test_cli.py
tests/unit/: test_cost.py  test_diff.py  test_recorder.py  test_replay.py  test_store.py
ts/: tsconfig.json
ts/src/: cost.ts  index.ts  recorder.ts  session.ts  store.ts
ts/src/integrations/: anthropic.ts  openai.ts
