[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-replay"
version = "0.1.0"
description = "Dead-simple, local-first, framework-agnostic agent observability. One decorator, one SQLite file, full tracing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "agent-replay contributors" },
]
keywords = ["ai", "agent", "observability", "tracing", "llm", "replay", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.30"]
langchain = ["langchain-core>=0.2"]
dev = ["pytest", "mypy", "ruff", "pytest-cov"]

[project.scripts]
agent-replay = "agent_replay.cli.main:app"

[project.urls]
Homepage = "https://github.com/routsom/agent-replay"
Repository = "https://github.com/routsom/agent-replay"
Issues = "https://github.com/routsom/agent-replay/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["SIM108"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
